# mini-launchpad

./: CMakeLists.txt  MiniLaunchpadConfig.cmake.in  README.md  dput.cf
docker/: docker-compose.yml
docker/mini-dinstall/: Dockerfile  copy-archive-cron  mini-dinstall.conf  start.sh
docker/mini-launchpad/: Dockerfile  dput.cf  known_hosts  pbuilderrc  start.sh
docker/pure-ftpd/: Dockerfile
docker/reprepro/: Dockerfile  incoming.py
docker/reprepro/conf/: distributions
docker/sftpd/: Dockerfile  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  update_permissions.sh
docker/sftpd-bin/: ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
docs/: README.md  data-flow.graphml
etc/systemd/system/: mini-launchpad.service.in
mini-launchpad/: mini-launchpad  mini-launchpad.py
